// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitTwammOrder > various pools > large order, low liquidity, token0 1`] = `
[
  {
    "amount": 7812500000000000000n,
    "fee": 170141183460469235273462165868118016n,
  },
  {
    "amount": 492187500000000000000n,
    "fee": 170141183460469235273462165868118016n,
  },
]
`;

exports[`splitTwammOrder > various pools > large order, low liquidity, token1 1`] = `
[
  {
    "amount": 492187500000000000000n,
    "fee": 170141183460469235273462165868118016n,
  },
  {
    "amount": 7812500000000000000n,
    "fee": 170141183460469235273462165868118016n,
  },
]
`;

exports[`splitTwammOrder > various pools > one pool, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
]
`;

exports[`splitTwammOrder > various pools > one pool, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with no liquidity, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with no liquidity, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
  },
]
`;
